seq2seq with attention

--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,63 +53,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([2, 5, 10]), torch.Size([3, 2, 10]), torch.Size([3, 2, 10]))"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "enc = Encoder(10, 10, 10, 3)\n",
-    "input = torch.LongTensor(np.random.randint(0, 10, (2, 5)))\n",
-    "a, b, c = enc(input)\n",
-    "a.shape, b.shape, c.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Decoder(nn.Module):\n",
-    "    def __init__(self, num_embeddings, embedding_dim, hidden_dim, num_layers, padding_dim=0):\n",
+    "    def __init__(self, num_embeddings, embedding_dim, hidden_dim, num_layers, padding_dim=0, start_dim=1):\n",
     "        super().__init__()\n",
     "        self.embedding = nn.Embedding(num_embeddings, embedding_dim, padding_dim)\n",
     "        self.decoder = nn.LSTM(embedding_dim, hidden_dim, num_layers, batch_first=True)\n",
-    "        self.word_predictor = nn.Linear(embedding_dim, num_embeddings)\n",
+    "        self.word_predictor = nn.Linear(hidden_dim, num_embeddings)\n",
+    "        self.start_dim = start_dim\n",
     "        \n",
-    "    def forward(self, output, h, c, input=None):\n",
+    "    def forward(self, output, h, c, input=None, max_sen_len=20):\n",
     "        '''\n",
     "        Output:\n",
     "        pred: (no_sentences * no_words * no_embeddings)\n",
     "        **Note: if input is not None, log_softmax is returned\n",
     "        else, input is returned without softmax**\n",
     "        '''\n",
+    "        \n",
     "        if input is not None: # training with teacher forcing\n",
+    "            \n",
     "            embeddings = self.embedding(input)\n",
     "            yts, _ = self.decoder(embeddings, (h, c))\n",
     "            orig_shape = yts.shape\n",
     "            pred = self.word_predictor(yts.reshape(orig_shape[0]*orig_shape[1], -1)).reshape(*orig_shape[:-1], -1)\n",
     "            return torch.softmax(pred, dim=-1)\n",
-    "        else:\n",
-    "            raise NotImplementedError"
+    "        \n",
+    "        else: # training using the decoders' own predictions\n",
+    "            \n",
+    "            num_sentences = output.shape[0]\n",
+    "            words_selected = torch.cuda.LongTensor([[self.start_dim] for _ in range(num_sentences)])\n",
+    "            pred = []\n",
+    "            for i in range(max_sen_len):\n",
+    "                embeddings = self.embedding(words_selected)\n",
+    "                y_t, (h, c) = self.decoder(embeddings, (h, c))\n",
+    "                orig_shape = y_t.shape\n",
+    "                pred_t = self.word_predictor(y_t.reshape(orig_shape[0]*orig_shape[1], \n",
+    "                                                         -1)).reshape(*orig_shape[:-1], -1).squeeze(1)\n",
+    "                pred.append(pred_t)\n",
+    "                words_selected = torch.max(pred_t, dim=1)[1].unsqueeze(1)\n",
+    "            \n",
+    "            pred = torch.stack(pred, dim=1)\n",
+    "            return torch.log_softmax(pred, dim=-1)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Seq2Seq(nn.Module):\n",
+    "    def __init__(self, source_vocab_len, target_vocab_len, embedding_dim, hidden_dim,\n",
+    "                       start_dim=1, padding_dim=0, num_layers=1):\n",
+    "        super().__init__()\n",
+    "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim)\n",
+    "        self.decoder = Decoder(target_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim, start_dim)\n",
+    "        \n",
+    "    def forward(self, source_input, target_input=None):\n",
+    "        output, h, c = self.encoder(source_input)\n",
+    "        return self.decoder(output, h, c, target_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Without teacher forcing**\n",
+    "\n",
+    "`input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))`\n",
+    "\n",
+    "`s = Seq2Seq(10, 12, 9, 7)`\n",
+    "\n",
+    "`s.cuda()`\n",
+    "\n",
+    "`pred = s(input)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**With teacher forcing**\n",
+    "\n",
+    "`tar_input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))`\n",
+    "\n",
+    "`s(input, tar_input).shape`"
+   ]
   }
  ],
  "metadata": {
