--- a/seq2seq_with_attention.ipynb
+++ b/seq2seq_with_attention.ipynb
@@ -11,69 +11,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Attention(nn.Module):\n",
     "    def __init__(self, dim):\n",
     "        super().__init__()\n",
-    "        self.bilinear = nn.Bilinear(dim, dim, 1)\n",
+    "        self.layer1 = nn.Linear(dim * 2, dim)\n",
+    "        self.layer2 = nn.Linear(dim, 1)\n",
     "        \n",
     "    def forward(self, source_h, target_h):\n",
-    "        '''\n",
-    "        # TODO: repeat copies data, use expand\n",
-    "        \n",
-    "        source_h => (num_sentences * num_words * embedding_dim)\n",
-    "        target_h => (num_sentences * embedding_dim) \n",
-    "        '''\n",
     "        num_sentences, num_words = source_h.shape[:-1]\n",
     "        target_h = target_h.repeat(1, num_words).reshape(num_words * num_sentences, -1)\n",
-    "        raw_weights = self.bilinear(target_h, source_h.reshape(num_words * num_sentences, \n",
-    "                                                               -1)).reshape(num_sentences, num_words)\n",
+    "        mlp_input = torch.cat((target_h, source_h.reshape(num_words * num_sentences, -1)\n",
+    "                              ), dim=1).reshape(num_words * num_sentences, -1)\n",
+    "        \n",
+    "        h1 = torch.tanh(self.layer1(mlp_input))\n",
+    "        h2 = self.layer2(h1)\n",
+    "        \n",
+    "        raw_weights = h2.reshape(num_sentences, num_words)\n",
     "        weights = torch.softmax(f.relu(raw_weights), dim=1)\n",
     "        \n",
     "        return torch.sum(weights.unsqueeze(-1) * source_h, dim=1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[5.1823, 8.9290, 2.2333, 1.0917, 0.2633, 2.2023, 1.0913, 5.9290, 4.0307,\n",
-       "         8.8173],\n",
-       "        [6.6327, 1.2118, 4.9474, 2.3144, 8.5292, 1.8956, 0.1587, 5.9996, 3.1568,\n",
-       "         0.3140]], grad_fn=<SumBackward2>)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "source_h = torch.Tensor(np.random.randint(0, 10, (2, 4, 10)))\n",
-    "target_h = torch.Tensor(np.random.randint(0, 10, (2, 10)))\n",
-    "a = Attention(10)\n",
-    "a(source_h, target_h)"
+    "` source_h = torch.Tensor(np.random.randint(0, 10, (2, 4, 10)))`\n",
+    "\n",
+    "` target_h = torch.Tensor(np.random.randint(0, 10, (2, 10)))`\n",
+    "\n",
+    "`a = Attention(10)`\n",
+    "\n",
+    "`a(source_h, target_h)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.cuda.set_device(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +82,13 @@
     "            pred_t = self.word_predictor(y_t.reshape(orig_shape[0]*orig_shape[1], \n",
     "                                                     -1)).reshape(*orig_shape[:-1], -1).squeeze(1)\n",
     "            pred.append(pred_t)\n",
-    "            words_selected = torch.max(pred_t, dim=1)[1].unsqueeze(1)\n",
     "            decoder_context = self.attention(source_h, h[-1])\n",
+    "            \n",
+    "            if input == None:\n",
+    "                words_selected = torch.max(pred_t, dim=1)[1].unsqueeze(1)\n",
+    "            else:\n",
+    "                raise NotImplementedError\n",
+    "\n",
     "\n",
     "        pred = torch.stack(pred, dim=1)\n",
     "        return torch.log_softmax(pred, dim=-1)   "
@@ -113,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
