--- a/seq2seq_with_attention.ipynb
+++ b/seq2seq_with_attention.ipynb
@@ -40,13 +40,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "` source_h = torch.Tensor(np.random.randint(0, 10, (2, 4, 10)))`\n",
-    "\n",
-    "` target_h = torch.Tensor(np.random.randint(0, 10, (2, 10)))`\n",
-    "\n",
-    "`a = Attention(10)`\n",
-    "\n",
-    "`a(source_h, target_h)`"
+    "```\n",
+    "source_h = torch.Tensor(np.random.randint(0, 10, (2, 4, 10)))\n",
+    "target_h = torch.Tensor(np.random.randint(0, 10, (2, 10)))\n",
+    "a = Attention(10)\n",
+    "a(source_h, target_h)\n",
+    "```"
    ]
   },
   {
@@ -116,13 +115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`s = Seq2SeqWithAttention(10, 12, 9, 8)`\n",
-    "\n",
-    "`s.cuda()`\n",
-    "\n",
-    "`input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))`\n",
-    "\n",
-    "`s(input)`"
+    "```\n",
+    "s = Seq2SeqWithAttention(10, 12, 9, 8)\n",
+    "s.cuda()\n",
+    "input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))\n",
+    "s(input)\n",
+    "```"
    ]
   }
  ],
