--- a/seq2seq_with_attention.ipynb
+++ b/seq2seq_with_attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +73,10 @@
     "        decoder_context = torch.zeros(num_sentences, hidden_dim).cuda()\n",
     "        pred = []\n",
     "        \n",
+    "        if input is not None:\n",
+    "            max_sen_len = input.shape[1]\n",
+    "            teacher_words = input.t()\n",
+    "        \n",
     "        for i in range(max_sen_len):\n",
     "            embeddings = self.embedding(words_selected)\n",
     "            decoder_input = torch.cat((embeddings, decoder_context.unsqueeze(1)), dim=-1)\n",
@@ -83,28 +87,28 @@
     "            pred.append(pred_t)\n",
     "            decoder_context = self.attention(source_h, h[-1])\n",
     "            \n",
-    "            if input == None:\n",
+    "            if input is None:\n",
     "                words_selected = torch.max(pred_t, dim=1)[1].unsqueeze(1)\n",
     "            else:\n",
-    "                raise NotImplementedError\n",
+    "                words_selected = teacher_words[i].unsqueeze(1)\n",
     "\n",
     "\n",
     "        pred = torch.stack(pred, dim=1)\n",
-    "        return torch.log_softmax(pred, dim=-1)   "
+    "        return torch.log_softmax(pred, dim=-1), None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Seq2SeqWithAttention(nn.Module):\n",
-    "    def __init__(self, source_vocab_len, target_vocab_len, embedding_dim, hidden_dim,\n",
-    "                       start_dim=1, padding_dim=0, num_layers=1):\n",
+    "    def __init__(self, source_vocab_len, target_vocab_len, embedding_dim, hidden_dim, num_layers=1,\n",
+    "                       padding_dim_source=0, start_dim_target=1, padding_dim_target=0):\n",
     "        super().__init__()\n",
-    "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim)\n",
-    "        self.decoder = DecoderAttention(target_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim, start_dim)\n",
+    "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_source)\n",
+    "        self.decoder = DecoderAttention(target_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_target, start_dim_target)\n",
     "        \n",
     "    def forward(self, source_input, target_input=None):\n",
     "        output, h, c = self.encoder(source_input)\n",
@@ -119,7 +123,12 @@
     "s = Seq2SeqWithAttention(10, 12, 9, 8)\n",
     "s.cuda()\n",
     "input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))\n",
+    "target = torch.cuda.LongTensor(np.random.randint(0, 12, (3, 10))\n",
+    "\n",
+    "# without teacher forcing\n",
     "s(input)\n",
+    "\n",
+    "# with teacher forcing\n",
     "```"
    ]
   }
