--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
     "            yts, _ = self.decoder(embeddings, (h, c))\n",
     "            orig_shape = yts.shape\n",
     "            pred = self.word_predictor(yts.reshape(orig_shape[0]*orig_shape[1], -1)).reshape(*orig_shape[:-1], -1)\n",
-    "            return torch.softmax(pred, dim=-1)\n",
+    "            return torch.log_softmax(pred, dim=-1), None\n",
     "        \n",
     "        else: # training using the decoders' own predictions\n",
     "            \n",
@@ -96,21 +96,21 @@
     "                words_selected = torch.max(pred_t, dim=1)[1].unsqueeze(1)\n",
     "            \n",
     "            pred = torch.stack(pred, dim=1)\n",
-    "            return torch.log_softmax(pred, dim=-1)   "
+    "            return torch.log_softmax(pred, dim=-1), None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Seq2Seq(nn.Module):\n",
-    "    def __init__(self, source_vocab_len, target_vocab_len, embedding_dim, hidden_dim,\n",
-    "                       start_dim=1, padding_dim=0, num_layers=1):\n",
+    "    def __init__(self, source_vocab_len, target_vocab_len, embedding_dim, hidden_dim, num_layers=1,\n",
+    "                       padding_dim_source=0, start_dim_target=1, padding_dim_target=0):\n",
     "        super().__init__()\n",
-    "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim)\n",
-    "        self.decoder = Decoder(target_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim, start_dim)\n",
+    "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_source)\n",
+    "        self.decoder = Decoder(target_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_target, start_dim_target)\n",
     "        \n",
     "    def forward(self, source_input, target_input=None):\n",
     "        output, h, c = self.encoder(source_input)\n",
@@ -122,14 +122,12 @@
    "metadata": {},
    "source": [
     "**Without teacher forcing**\n",
-    "\n",
-    "`input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))`\n",
-    "\n",
-    "`s = Seq2Seq(10, 12, 9, 7)`\n",
-    "\n",
-    "`s.cuda()`\n",
-    "\n",
-    "`pred = s(input)`"
+    "```\n",
+    "input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))\n",
+    "s = Seq2Seq(10, 12, 9, 7)\n",
+    "s.cuda()\n",
+    "pred = s(input)\n",
+    "```"
    ]
   },
   {
@@ -138,9 +136,10 @@
    "source": [
     "**With teacher forcing**\n",
     "\n",
-    "`tar_input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))`\n",
-    "\n",
-    "`s(input, tar_input).shape`"
+    "```\n",
+    "tar_input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))\n",
+    "s(input, tar_input).shape\n",
+    "```"
    ]
   }
  ],
