--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -112,7 +112,7 @@
     "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_source)\n",
     "        self.decoder = Decoder(target_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_target, start_dim_target)\n",
     "        \n",
-    "    def forward(self, source_input, target_input=None):\n",
+    "    def forward(self, source_input, target_input=None, source_mask=None):\n",
     "        output, h, c = self.encoder(source_input)\n",
     "        return self.decoder(output, h, c, target_input)"
    ]
