--- a/seq2seq_with_attention.ipynb
+++ b/seq2seq_with_attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "        self.layer1 = nn.Linear(dim * 2, dim)\n",
     "        self.layer2 = nn.Linear(dim, 1)\n",
     "        \n",
-    "    def forward(self, source_h, target_h):\n",
+    "    def forward(self, source_h, target_h, source_mask=None):\n",
+    "        \n",
     "        num_sentences, num_words = source_h.shape[:-1]\n",
     "        target_h = target_h.repeat(1, num_words).reshape(num_words * num_sentences, -1)\n",
     "        mlp_input = torch.cat((target_h, source_h.reshape(num_words * num_sentences, -1)\n",
@@ -31,6 +32,9 @@
     "        h2 = self.layer2(h1)\n",
     "        \n",
     "        raw_weights = h2.reshape(num_sentences, num_words)\n",
+    "        \n",
+    "        if source_mask is not None:\n",
+    "            raw_weights = source_mask * raw_weights\n",
     "        weights = torch.softmax(f.relu(raw_weights), dim=1)\n",
     "        \n",
     "        return torch.sum(weights.unsqueeze(-1) * source_h, dim=1)"
@@ -64,7 +68,7 @@
     "        \n",
     "        self.attention = Attention(hidden_dim)\n",
     "        \n",
-    "    def forward(self, output, h, c, input=None, max_sen_len=20):\n",
+    "    def forward(self, output, h, c, input=None, max_sen_len=20, source_mask=None):\n",
     "        \n",
     "        source_h = output\n",
     "        num_sentences, num_words, hidden_dim = output.shape\n",
@@ -85,7 +89,7 @@
     "            pred_t = self.word_predictor(y_t.reshape(orig_shape[0]*orig_shape[1], \n",
     "                                                     -1)).reshape(*orig_shape[:-1], -1).squeeze(1)\n",
     "            pred.append(pred_t)\n",
-    "            decoder_context = self.attention(source_h, h[-1])\n",
+    "            decoder_context = self.attention(source_h, h[-1], source_mask)\n",
     "            \n",
     "            if input is None:\n",
     "                words_selected = torch.max(pred_t, dim=1)[1].unsqueeze(1)\n",
@@ -110,9 +114,9 @@
     "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_source)\n",
     "        self.decoder = DecoderAttention(target_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_target, start_dim_target)\n",
     "        \n",
-    "    def forward(self, source_input, target_input=None):\n",
+    "    def forward(self, source_input, target_input=None, source_mask=None):\n",
     "        output, h, c = self.encoder(source_input)\n",
-    "        return self.decoder(output, h, c, target_input)"
+    "        return self.decoder(output, h, c, target_input, source_mask=source_mask)"
    ]
   },
   {
